window.prompt() returns jsval instead of string, allowing it to return null when required. wants to be changed back to a string once the DOM APIs support this same thing. bug 12021. r=jst@netscape.com