dom/public/base/nsIDOMWindow.h
@@ -141,7 +141,7 @@ public:
 
   NS_IMETHOD    Confirm(JSContext* cx, jsval* argv, PRUint32 argc, PRBool* aReturn)=0;
 
-  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, nsString& aReturn)=0;
+  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, jsval* aReturn)=0;
 
   NS_IMETHOD    Focus()=0;
 
@@ -265,7 +265,7 @@ public:
   NS_IMETHOD    Dump(const nsString& aStr);  \
   NS_IMETHOD    Alert(JSContext* cx, jsval* argv, PRUint32 argc);  \
   NS_IMETHOD    Confirm(JSContext* cx, jsval* argv, PRUint32 argc, PRBool* aReturn);  \
-  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, nsString& aReturn);  \
+  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, jsval* aReturn);  \
   NS_IMETHOD    Focus();  \
   NS_IMETHOD    Blur();  \
   NS_IMETHOD    Back();  \
@@ -355,7 +355,7 @@ public:
   NS_IMETHOD    Dump(const nsString& aStr) { return _to Dump(aStr); }  \
   NS_IMETHOD    Alert(JSContext* cx, jsval* argv, PRUint32 argc) { return _to Alert(cx, argv, argc); }  \
   NS_IMETHOD    Confirm(JSContext* cx, jsval* argv, PRUint32 argc, PRBool* aReturn) { return _to Confirm(cx, argv, argc, aReturn); }  \
-  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, nsString& aReturn) { return _to Prompt(cx, argv, argc, aReturn); }  \
+  NS_IMETHOD    Prompt(JSContext* cx, jsval* argv, PRUint32 argc, jsval* aReturn) { return _to Prompt(cx, argv, argc, aReturn); }  \
   NS_IMETHOD    Focus() { return _to Focus(); }  \
   NS_IMETHOD    Blur() { return _to Blur(); }  \
   NS_IMETHOD    Back() { return _to Back(); }  \
